# openai-decorator

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pr.yaml  pre_release.yaml  release.yaml
src/openai_decorator/: __init__.py  main.py
src/tests/: test_create_function_spec.py  test_get_arguments_from_response.py  test_openai_func.py
