[tool.poetry]
name = "openai-decorator"
version = "0.1.0"
description = ""
authors = ["Shruti Patel <shruti222patel@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shruti222patel/openai-decorator"
packages = [{include = "openai_decorator", from = "src"}]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]


[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
docstring-parser = "^0.15"
requests = "^2.31.0"
tenacity = "^8.2.2"
pytest-mock = "^3.11.1"

[tool.poetry.scripts]
add-docstring = "openai_decorator.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
bump2version = "^1.0.1"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
